# bevy-atoms

./: .gitignore  Cargo.toml  Makefile.toml  README.md  index.html
.github/workflows/: ci.yml  release.yaml
src/: animation.rs  arcball.rs  base.rs  camera.rs  cli.rs  console.rs  lib.rs  loading.rs  main.rs  molecule.rs  net.rs  player.rs  task.rs  ui.rs
src/net/: console.rs
src/ui/: compute.rs  cp2k.rs  gaussian.rs  orca.rs  selection.rs  submit.rs  template.rs  vasp.rs
tests/files/cp2k-templates/: opt.jinja
tests/files/gaussian-templates/: opt.gjf.jinja  sp.gjf.jinja
tests/files/orca-templates/: opt-oniom.jinja  opt.jinja  sp-epr.jinja  sp-moessbauer.jinja  sp-uv.jinja  sp.jinja
tests/files/vasp-templates/bader_charge/: INCAR.jinja
tests/files/vasp-templates/cohp/: INCAR.jinja
tests/files/vasp-templates/dft_plus_u/: INCAR.jinja
tests/files/vasp-templates/freq/: INCAR.jinja
tests/files/vasp-templates/hse/: INCAR.jinja
tests/files/vasp-templates/md/: INCAR.jinja
tests/files/vasp-templates/md_ML/: INCAR.jinja
tests/files/vasp-templates/opt/: INCAR.jinja
tests/files/vasp-templates/phonon_dfpt/: INCAR.jinja
tests/files/vasp-templates/sp/: INCAR.jinja
tests/files/vasp-templates/stm/: INCAR.jinja
tests/files/vasp-templates/wf/: INCAR.jinja
