# [[file:bevy.note::e345323a][e345323a]]
[package]
name = "gchemol-view"
version = "0.1.4"
publish = false
authors = ["Wenping Guo <ybyygu@gmail.com>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

# # The profile that 'cargo dist' will build with
# [profile.dist]
# inherits = "release"
# lto = "thin"

[features]
dev = ["bevy/bevy_dylib"]

[dependencies]
bevy = { version = "0.10" }
bevy_asset_loader = { version = "0.15" }
rand = { version = "0.8.3" }
bevy-inspector-egui = "0.18.0"
bevy_mod_picking = "0.12.0"
bevy_mod_raycast = "0.8.0"
bevy_egui = "0.20"
# wasm build panic issue: https://bevy-cheatbook.github.io/platforms/wasm/panic-console.html
console_error_panic_hook = "0.1"
bevy_prototype_debug_lines = { version = "0.10.1", features = ["3d"] }
lerp = "0.4.0"                                                         # for camera
bevy_console = "0.7.0"                                                 # command line UI

gut = { version = "0.4.3", package = "gchemol-gut" }
gchemol-core = { version = "0.1.4", features = ["adhoc"] }
# text_parser = { version = "0.4.5", package = "gchemol-parser" }

# native build only:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4", features = ["derive"] }
gchemol = { version = "0.1.3", features = ["adhoc"] }

[build-dependencies]
embed-resource = "1.4"

[workspace]

# [patch.crates-io]
# gchemol-gut = { path = "/home/ybyygu/Workspace/Programming/gchemol-rs/gut" }
# gchemol-core = { path = "/home/ybyygu/Workspace/Programming/gchemol-rs/gchemol-core" }
# e345323a ends here
