# [[file:bevy.note::e345323a][e345323a]]
[package]
name = "gchemol-view"
version = "0.2.15"
publish = false
authors = ["Wenping Guo <ybyygu@gmail.com>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = ["bevy/bevy_dylib"]

[dependencies]
# https://bevy-cheatbook.github.io/setup/bevy-config.html#bevy-cargo-features
bevy = { version = "0.10.1", default-features = false, features = [
  "bevy_asset", # Assets management
  "bevy_winit", # Window management
  "x11",        # Linux: Support X11 windowing system
  # bevy_render and bevy_core_pipeline are required for any application using Bevy rendering.
  "bevy_render",        # Rendering framework core
  "bevy_core_pipeline", # Common rendering abstractions
  "bevy_pbr",           # 3D (physically-based) rendering
  "bevy_text",          # Text/font rendering
  "bevy_ui",            # UI toolkit
  # "animation",          #

  # File formats:
  "png",
] }

bevy_asset_loader = { version = "0.15" }
bevy_embedded_assets = { version = "0.7" }
rand = { version = "0.8.3" }
bevy_mod_picking = { version = "0.13.0", default-features = false, features = [
  "backend_egui",
  "backend_raycast",
  "backend_bevy_ui",
  "highlight",
  "selection",
] }

bevy_egui = "0.20"
# wasm build panic issue: https://bevy-cheatbook.github.io/platforms/wasm/panic-console.html
console_error_panic_hook = "0.1"
# bevy_console = "0.7.0"                                                 # command line UI
# bevy_panorbit_camera = { version = "0.4.1", features = ["bevy_egui"], git = "https://github.com/Plonq/bevy_panorbit_camera" }
bevy_panorbit_camera = { version = "0.4.1", features = ["bevy_egui"] }
# egui = { version = "0.21.0", default-features = false, features = ["bytemuck"] }

gut = { version = "0.4.4", package = "gchemol-gut" }
tokio = { version = "1.11.0", features = [
  "net",
  "io-util",
  "sync",
  "rt-multi-thread",
] }
axum = { version = "0.6.17", features = ["macros"] }
crossbeam-channel = "0.5.1"
# futures-lite = "1.13.0"
bevy-tokio-tasks = "0.10.2"
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "blocking",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.94"
rfd = "0.11.3"
enum-iterator = "1.4.1"
include_dir = { version = "0.7.3", features = ["glob"] }

[dev-dependencies]
bevy = { version = "0.10" }
bevy-inspector-egui = { version = "0.18.3", default-features = false }

# native build only:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4", features = ["derive"] }
gchemol = { version = "0.1.7", features = ["adhoc"] }

[build-dependencies]
embed-resource = "1.4"

[workspace]

[patch.crates-io]
# gchemol = { path = "/home/ybyygu/Workspace/Programming/gchemol-rs/gchemol" }
# gchemol-readwrite = {path = "/home/ybyygu/Workspace/Programming/gchemol-rs/gchemol-readwrite"}
# e345323a ends here
